--- a/index.html
+++ b/index.html
@@ -10,7 +10,39 @@
     <link rel="stylesheet" href="./styles/fonts.css">
 </head>
 <body>
-    
+    <!-- start header -->
+    <header>
+        <div>
+            <img class="logo" src="./images/logo-white.svg" alt="Zarinpal logo">
+        </div>
+        <nav>
+            <ul class="header-ul">
+                <li class="more-menu" id="show-product-menu">
+                    <a href="#">محصولات</a>
+                    <img src="./images/down-arrow-svgrepo-com.svg" alt="down arrow">
+                </li>
+                <li>
+                    <a href="#">تعرفه‌ها</a>
+                </li>
+                <li>
+                    <a href="#">توسعه‌دهندگان</a>
+                </li>
+                <li>
+                    <a href="#">تماس‌با‌ما</a>
+                </li>
+                <li class="more-menu" id="show-more-menu">
+                    <a href="#">بیش‌تر</a>
+                    <img src="./images/down-arrow-svgrepo-com.svg" alt="down arrow">
+                </li>
+                <li>
+                    <a href="#">زرین‌پال‌من</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+    <!-- end header -->
+
+    <div style="width: 100vw; height: 2000px; background-color: red;"></div>
 
     <script src="./js/script.js"></script>
 </body>
