i implemented hamburger menu and styled it and made it dynamic.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="shortcut icon" href="./images/favicon.ico">
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="stylesheet" href="./styles/fonts.css">
+    <link rel="stylesheet" href="./styles/all.css">
 </head>
 <body>
     <!-- start header -->
@@ -39,6 +40,37 @@
                 </li>
             </ul>
         </nav>
+        
+        <img src="./images/hamburger.svg" class="hamburger-icon" alt="hamburger menu">
+        <div class="hamburger-menu">
+            <div class="cross-icon">
+                <img src="./images/cross.svg" class="cross-icon-image" alt="cross icon">
+            </div>
+            <div class="hamburger-menu-items">
+                <ul>
+                    <li>
+                        <a href="#">تعرفه‌ها</a>
+                    </li>
+                    <li>
+                        <a href="#">اپلیکیشن</a>
+                    </li>
+                    <div></div>
+                    <li>
+                        <a href="#">سوالات متداول</a>
+                    </li>
+                    <li>
+                        <a href="#">محصولات</a>
+                    </li>
+                    <li>
+                        <a href="#">تماس با ما</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="more-item">
+                <a href="#">زرین‌پال من</a>
+                <img src="./images/arrow.svg" alt="left arrow">
+            </div>
+        </div>
     </header>
     <!-- end header -->
 
