--- a/index.html
+++ b/index.html
@@ -123,7 +123,29 @@
     </header>
     <!-- end header -->
 
-    <div style="width: 100vw; height: 2000px; background-color: red;"></div>
+    <!-- start Banner -->
+    <main>
+        <div class="banner">
+            <div class="banner-text">
+                <h3>بیش از ۱۲ سال</h3>
+                <h3>انتخاب‌مطمئنِ‌کسب‌وکارهای‌آنلاین</h3>
+                <p>
+                    زرین‌پال، اولین پرداخت‌یار پیشگام کشور، با به‌کارگیری سبک و استانداردهای جدید در ارائه‌ی خدمات درگاه پرداخت اینترنتی، سرویس‌های متنوعی در حوزه‌ی پرداخت الکترونیک را برای کسب و کارها ارائه کرده است؛ با این هدف که در افزایش سهم تجارت الکترونیکی در تولید ناخالص ملی و کمک به رشد و توسعه‌ی کسب‌وکارها، نقش سازنده‌‌ای ایفا کند.
+                </p>
+                <div class="banner-button">
+                    <a href="#" class="register">ثبت‌نام</a>
+                    <a href="#" class="login">ورود</a>
+                </div>
+            </div>
+            <div class="banner-image">
+                <img src="./images/home.svg" alt="banner image">
+            </div>
+        </div>
+        <div class="go-down">
+            <div></div>
+            <img src="./images/down-arrow-svgrepo-com.svg" alt="go down">
+        </div>
+    </main>
 
     <script src="./js/script.js"></script>
 </body>
