--- a/index.html
+++ b/index.html
@@ -146,7 +146,30 @@
             <img src="./images/down-arrow-svgrepo-com.svg" alt="go down">
         </div>
     </main>
+    <!-- end main -->
 
+    <!-- start cards -->
+    <section class="online-payment">
+        <div>
+            <img src="./images/pg.svg" alt="online payment" class="section-image">
+        </div>
+
+        <div class="section-text">
+            <h2>درگاه پرداخت اینترنتی</h2>
+            <h3>مهندسی شده برای رشد و فروش بیش‌تر</h3>
+            <p>
+                درگاه پرداخت زرین‌پال، با اتصالِ همزمان به درگاه‌های متنوع و معتبر بانکی(PSPها)،کاربران را به سریع‌ترین و مطمئن‌ترین درگاه بانکی منتقل می‌کند و به واسطه‌ی قابلیت مسیردهی هوشمند، باعث افزایش درصد تراکنش‌های موفق می‌شود.
+            </p>
+
+            <div class="section-links">
+                <a href="#" class="first-button">ساخت درگاه پرداخت</a>
+                <a href="#" class="second-button">
+                    بیش‌تر بدانید.
+                    <img src="./images/arrow.svg" alt="arrow left">
+                </a>
+            </div>
+        </div>
+    </section>
     <script src="./js/script.js"></script>
 </body>
 </html>
