i implemented start-box and styled it and made a reactive.

--- a/index.html
+++ b/index.html
@@ -309,6 +309,14 @@
         </div>
     </article>
     <!-- end attributes -->
+
+    <!-- start start-box -->
+    <div class="start-box">
+        <h4>به خانواده‌ی یک میلیونی زرین‌پال بپیوندید.</h4>
+        <p>یک ماه رایگان، هدیه‌ی عضویت زرین‌پال به شما</p>
+        <a href="#">شروع کنید</a>
+    </div>
+    <!-- end start-box -->
     <script src="./js/script.js"></script>
 </body>
 </html>
