i implemented support section and styled it and made it responsive.

--- a/index.html
+++ b/index.html
@@ -317,6 +317,26 @@
         <a href="#">شروع کنید</a>
     </div>
     <!-- end start-box -->
+
+    <!-- start support -->
+    <div class="support">
+        <div class="support-number">
+            <p>
+                پشتیبانی ۲۴ ساعته، ۷ روز هفته 
+                <span class="line">|</span>
+                <span>پشتیبانی پذیرندگان : <span class="phone-number">۴۱۲۳۹-۰۲۱</span></span>
+                <span class="line">|</span>
+                <span>پشتیبانی خریداران : <span class="phone-number">۴۵۶۲۸۰۰۰-۰۲۱</span></span>
+            </p>
+        </div>
+        <div class="support-request">
+            <a href="#">
+                <p>درخواست پشتیبانی</p>
+                <img src="./images/arrow.svg" alt="arrow left">
+            </a>
+        </div>
+    </div>
+    <!-- end support -->
     <script src="./js/script.js"></script>
 </body>
 </html>
