--- a/index.html
+++ b/index.html
@@ -337,6 +337,63 @@
         </div>
     </div>
     <!-- end support -->
+
+    <!-- start footer -->
+    <footer>
+        <div class="footer-links">
+            <div>
+                <p>محصولات</p>
+                <ul>
+                    <li><a href="#">زرین‌لینک</a></li>
+                    <li><a href="#">درگاه پرداخت اینترنتی</a></li>
+                    <li><a href="#">زرین‌کارت</a></li>
+                    <li><a href="#">عیان</a></li>
+                    <li><a href="#">استرداد وجه</a></li>
+                    <li><a href="#">تسویه پیش از موعد</a></li>
+                    <li><a href="#">تسهیم فردایی</a></li>
+                </ul>
+            </div>
+            <div>
+                <p>آشنایی با زرین‌پال</p>
+                <ul>
+                    <li><a href="#">تعرفه‌ها</a></li>
+                    <li><a href="#">درباره ما</a></li>
+                    <li><a href="#">سوالات متداول</a></li>
+                    <li><a href="#">همکاری در فروش</a></li>
+                </ul>
+            </div>
+            <div>
+                <p>ارتباط‌ بیشتر</p>
+                <ul>
+                    <li><a href="#">تماس با ما</a></li>
+                    <li><a href="#">قوانین و مقررات</a></li>
+                    <li><a href="#">حریم ‌خصوصی</a></li>
+                </ul>
+            </div>
+            <div>
+                <p>منابع</p>
+                <ul>
+                    <li><a href="#">دریافت شماره شبا</a></li>
+                    <li><a href="#">زرین‌بین</a></li>
+                    <li><a href="#">توسعه‌دهندگان</a></li>
+                    <li><a href="#">وبلاگ</a></li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="social-media">
+            <p>زرین‌پال در شبکه‌های اجتماعی:</p>
+            <div>
+                <a href="#"><img src="./images/instagram.svg" alt="instagram"></a>
+                <a href="#"><img src="./images/twitter.svg" alt="twitter"></a>
+                <a href="#"><img src="./images/telegram.svg" alt="telegram"></a>
+                <a href="#"><img src="./images/linkedin.svg" alt="linkedin"></a>
+                <a href="#"><img src="./images/aparat.svg" alt="aparat"></a>
+            </div>
+        </div>
+    </footer>
+    <!-- end footer -->
+
     <script src="./js/script.js"></script>
 </body>
 </html>
