I implemented bell and styled it

--- a/index.html
+++ b/index.html
@@ -394,6 +394,13 @@
     </footer>
     <!-- end footer -->
 
+    <!-- start bell -->
+    <div class="bell">
+        <img src="./images/bell.svg" alt="bell" title="زنگوله">
+    </div>
+    <p class="bell-title">آخرین اخبار زرین‌پال و گزارش تراکنش‌های خود را دریافت کنید</p>
+    <!-- end bell -->
+
     <script src="./js/script.js"></script>
 </body>
 </html>
